Only working cops can open/closes doors at prison and police stations.
Can config doors on the file: s_police_doors.lua

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "whitelist/server.lua",
         "animation/server.lua",
         "police/s_police.lua",
+		"police/s_police_doors.lua",
         "stylist/server.lua",
         "idcard/server.lua",
         "licenses/server.lua",
