--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "whitelist/server.lua",
         "animation/server.lua",
         "police/s_police.lua",
+		"police/s_police_doors.lua",
         "stylist/server.lua",
         "idcard/server.lua",
         "licenses/server.lua",
@@ -158,7 +159,6 @@
         "burdigalax/client/gui/fonts/Montserrat-Regular.ttf",
         "hud/pinmap/client/web/map.html",
         "hud/pinmap/client/web/map.css",
-		"hud/pinmap/client/web/minimapicons.css",
         "hud/pinmap/client/web/map.js",
         "hud/pinmap/client/web/map.jpg",
         "hud/pinmap/client/web/minimap.html",
@@ -184,8 +184,6 @@
         "hud/pinmap/client/web/icons/wood.png",
         "hud/pinmap/client/web/icons/license.png",
         "hud/pinmap/client/web/icons/tools.png",
-		"hud/pinmap/client/web/icons/hud_icons.png",
-		"hud/pinmap/client/web/icons/transparent.png",
         "hud/pinmap/client/web/icons/shelby/ico-pos-acierie.png",
         "hud/pinmap/client/web/icons/shelby/ico-pos-armurerie.png",
         "hud/pinmap/client/web/icons/shelby/ico-pos-atm.png",
